--- a/LaboratorioCRC.ipynb
+++ b/LaboratorioCRC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f5fd9522-8361-45b9-ae3d-7c6bc2f87e06",
+   "id": "598135a2-1c99-406f-b2e9-da6eee421961",
    "metadata": {},
    "source": [
     "Laboratório de Redes de Computadores: Implementação e Análise do CRC\n",
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "a4aa7e22-9808-4b6a-b7fa-4fce1a93477a",
    "metadata": {},
    "outputs": [
@@ -584,12 +584,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "980b8373-ce73-419a-bab1-bd4ae419edff",
+   "cell_type": "markdown",
+   "id": "5413fe62-527e-4edd-847c-5d32aa6846bb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Limitações do CRC:\n",
+    "- Erros de até r bits são detectados;\n",
+    "- Se for acima de r bits, o CRC já começa a falhar;\n",
+    "- Pode não detectar erros \"bem planejados\";\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
